aws/security-groups.tf
resource "aws_security_group" "security_group_one" {
  name_prefix = "${local.cluster_name}-security-group-1"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "security_group_two" {
  name_prefix = "${local.cluster_name}-security-group-2"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "192.168.0.0/16",
    ]
  }
}
